# magent

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  for_claude.md  memory_use.md  project_plan.md  pyproject.toml  requirements-script-runner.txt  requirements.txt  save_pack.sh  用户使用手册.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
data_structure/: context.md  planner.md  qa_agent.md  subagent.md  warmup_agent.md
docs/: DEPLOYMENT_GUIDE.md  KAG_MCP_EXTERNAL_USAGE.md  PRE_DEPLOYMENT_CHECKLIST.md  README.md  agentscope-migration-summary.md  api-contract.yaml  architecture-current.md  capability-guide.md  citation.md  claude-code-subagent-architecture.md  code-sandbox-proposal.md  compliance-guide.md  custom-subagent-proposal.md  database-schema.sql  environment-config.md  error-codes.md  excel-batch-analysis-proposal.md  jingxin-agent-optimization-based-on-claude-code.md  jingxin-agent-optimization-based-on-hermes-agent.md  jingxin-memory-layered-optimization.md  mem0-integration-plan.md  memory-context-management-proposal.md  observability-guide.md  private-kb-integration-plan.md  report-rendering-design-spec.md  runbook.md  runtime-prompts-and-tools.md  scheduled-task-proposal.md  secrets-management.md  security-checklist.md  storage-guide.md  tool-progress-bar-proposal.md  versioning-guide.md
error_log/: 上下文关系.md  常见计划1.md  打招呼.md
memory_manage/: read.md  write.md
my_design_doc/: config.md  model_config.json  model_import.json  project_plan.md  优化,md  优化.md  优化日志.md  用户使用手册.md
my_design_doc/data_structure/: context.md  (+6 more)
scripts/: import_model_configs.py  migrate_admin_skills_to_db.py  migrate_env_models_to_db.py
(+526 files in other folders)
